feat: change background and color on click

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,5 +1,5 @@
 {
   "app_description": {
-    "message": "Coronavirus phrases detector on the websites"
+    "message": "Coronavirus keywords detector on the websites"
   }
 }
